# pix

./: README.md  go.mod  index.html  package.json  pnpm-lock.yaml  vite.config.ts
desktop/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
desktop/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src/components/: page.tsx  sidebar.tsx  titlebar.tsx
desktop/src/context/: theme.tsx
desktop/src/routes/: __root.tsx  about.lazy.tsx  albums.tsx  index.tsx  people.tsx  settings.tsx
mobile/: README.md  pubspec.yaml
mobile/android/app/: build.gradle
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/kotlin/com/shardul/pix/: MainActivity.kt
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
