[package]
name = "pix"
version = "0.1.0"
description = "Photos and videos management"
authors = ["Shardul Nalegave <nalegaveshardul40@gmail.com>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde_json = "1"

[dependencies.tauri]
version = "1"
features = ["shell-open"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.sqlx]
version = "0.7"
features = ["runtime-tokio", "tls-rustls"]

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
